k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sandbox-site-sandbox-site-network: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - image: ${REPO}_mongodb:${TAG}
          name: mongodb
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
