k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: user
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sandbox-site-sandbox-site-network: "true"
        io.kompose.service: user
    spec:
      containers:
        - env:
            - name: MONGO_URL
              value: mongodb://mongodb:27017/users
            - name: PORT
              value: "8080"
          image: ${REPO}_user:${TAG}
          name: user
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
