k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sandbox-site-sandbox-site-network: "true"
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: PORT
              value: "3000"
            - name: SESSION_SECRET
              value: change_me_later
            - name: USER_SERVER_BASE
              value: http://user:8080
          image: ${REPO}_web:${TAG}
          name: web
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
