k8s/sandbox-site-sandbox-site-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sandbox-site-sandbox-site-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/sandbox-site-sandbox-site-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sandbox-site-sandbox-site-network: "true"
